add fonts dmSans and Roboto variables

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
 :root {
   --colorBlack: #161616;
   --colorWhite: #f2f2f2;
+  --font-dmSans: "DM Sans", sans-serif;
+  --font-roboto: "Roboto", sans-serif;
 }
 h1,
 h2,
