--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,31 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui" {
+  themes: --default;
+}
+@plugin "daisyui/theme" {
+  default: true;
+  --color-primary: #f2f2f2;
+  --color-secondary: #161616;
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+/* @layer base { */
+/*   *, */
+/*   ::after, */
+/*   ::before, */
+/*   ::backdrop, */
+/*   ::file-selector-button { */
+/*     border-color: var(--color-gray-200, currentcolor); */
+/*   } */
+/* } */
+
 :root {
   --colorBlack: #161616;
   --colorWhite: #f2f2f2;
